<resources>
    <string name="app_name">SneakerApp</string>

    <string name="sneakership_title">Sneakership</string>
    <string name="popular_title">Popular</string>
    <string name="sort_by_title">Sort by</string>
    <string name="cart">Cart</string>
    <string name="order_details">Order Details</string>
    <string name="subtotal">Subtotal</string>
    <string name="taxes">Taxes and Charges</string>
    <string name="total">Total</string>
    <string name="check_out">Check Out</string>
    <string name="size">Size (uk) :</string>
    <string name="colour">Colour : </string>
    <string name="price">Price : </string>
    <string name="add_to_cart">Add to Cart</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="nike_air_zoom_pegasus">Nike Air Zoom Pegasus</string>
    <string name="oldest_running_shoe">Oldest running shoe</string>
</resources>