<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".view.fragments.ShoeDetailsFragment">

    <ImageView
        android:id="@+id/back_imageview"
        android:layout_width="32dp"
        android:layout_height="32dp"
        android:layout_marginStart="24dp"
        android:layout_marginTop="24dp"
        android:src="@drawable/left_arrow_icon"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <ImageView
        android:id="@+id/shoe_imageview"
        android:layout_width="250dp"
        android:layout_height="200dp"
        android:layout_marginStart="24dp"
        android:src="@drawable/shoe_image"
        app:layout_constraintStart_toEndOf="@id/back_imageview"
        app:layout_constraintTop_toBottomOf="@id/back_imageview" />

    <androidx.cardview.widget.CardView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="16dp"
        app:cardCornerRadius="24dp"
        app:cardElevation="4dp"
        app:layout_constraintTop_toBottomOf="@id/shoe_imageview"
        app:layout_constraintStart_toStartOf="parent">

        <androidx.constraintlayout.widget.ConstraintLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent">

            <TextView
                android:id="@+id/shoe_name_textview"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="24dp"
                android:layout_marginTop="24dp"
                android:text="@string/nike_air_zoom_pegasus"
                android:textSize="32sp"
                android:textStyle="bold"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent" />

            <ImageView
                android:id="@+id/error_icon"
                android:layout_width="24dp"
                android:layout_height="24dp"
                android:layout_marginTop="24dp"
                android:layout_marginStart="10dp"
                android:src="@drawable/error_icon"
                app:layout_constraintStart_toEndOf="@id/shoe_name_textview"
                app:layout_constraintTop_toTopOf="parent" />

            <TextView
                android:id="@+id/description_textview"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="24dp"
                android:layout_marginTop="8dp"
                android:text="@string/oldest_running_shoe"
                android:textSize="12sp"
                android:textStyle="bold"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@id/shoe_name_textview" />

            <TextView
                android:id="@+id/size_textview"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="24dp"
                android:layout_marginTop="24dp"
                android:text="@string/size"
                android:textColor="#808080"
                android:textSize="24sp"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@id/description_textview" />

            <TextView
                android:id="@+id/size_number_textview"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="24dp"
                android:layout_marginTop="24dp"
                android:text="7  8  9"
                android:textSize="24sp"
                android:textStyle="bold"

                app:layout_constraintStart_toEndOf="@id/size_textview"
                app:layout_constraintTop_toBottomOf="@id/description_textview" />

            <TextView
                android:id="@+id/colour_textview"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="24dp"
                android:layout_marginTop="24dp"
                android:text="@string/colour"
                android:textColor="#808080"
                android:textSize="24sp"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@id/size_textview" />

            <ImageView
                android:id="@+id/peach_colour"
                android:layout_width="48dp"
                android:layout_height="24dp"
                android:background="#FFE5B4"
                android:layout_marginTop="28dp"
                android:layout_marginStart="16dp"
                app:layout_constraintStart_toEndOf="@id/colour_textview"
                app:layout_constraintTop_toBottomOf="@id/size_number_textview" />

            <ImageView
                android:id="@+id/blue_colour"
                android:layout_width="48dp"
                android:layout_height="24dp"
                android:background="#0000FF"
                android:layout_marginTop="28dp"
                android:layout_marginStart="16dp"
                app:layout_constraintStart_toEndOf="@id/peach_colour"
                app:layout_constraintTop_toBottomOf="@id/size_number_textview" />

            <ImageView
                android:id="@+id/aqua_colour"
                android:layout_width="48dp"
                android:layout_height="24dp"
                android:background="#00FFFF"
                android:layout_marginTop="28dp"
                android:layout_marginStart="16dp"
                app:layout_constraintStart_toEndOf="@id/blue_colour"
                app:layout_constraintTop_toBottomOf="@id/size_number_textview" />

            <TextView
                android:id="@+id/price_textview"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="24dp"
                android:layout_marginTop="24dp"
                android:text="@string/price"
                android:textColor="#808080"
                android:textSize="24sp"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@id/colour_textview" />

            <TextView
                android:id="@+id/totalValue_textview"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="24dp"
                android:text="$438"
                android:textColor="#FF8976"
                android:textSize="24sp"
                android:textStyle="bold"
                app:layout_constraintStart_toEndOf="@id/price_textview"
                app:layout_constraintTop_toBottomOf="@+id/colour_textview" />

            <androidx.appcompat.widget.AppCompatButton
                android:id="@+id/checkOutButton"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="48dp"
                android:layout_marginTop="16dp"
                android:background="@drawable/rounded_corner_button"
                android:paddingLeft="16dp"

                android:paddingRight="16dp"
                android:text="$ Add to Cart"
                android:textColor="@color/white"
                app:layout_constraintStart_toEndOf="@+id/totalValue_textview"
                app:layout_constraintTop_toBottomOf="@+id/colour_textview" />

        </androidx.constraintlayout.widget.ConstraintLayout>
    </androidx.cardview.widget.CardView>

</androidx.constraintlayout.widget.ConstraintLayout>